--- a/utils/common_utils.ipynb
+++ b/utils/common_utils.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +59,10 @@
     "            sns.distplot(numeric_df[column],color=color_val,ax=axes_obj,kde = False)\n",
     "        elif plot == \"box\":\n",
     "            sns.boxplot(numeric_df[column],color=color_val,ax=axes_obj)\n",
+    "        elif plot == \"density\":\n",
+    "            sns.kdeplot(numeric_df[column],color=color_val,ax=axes_obj,shade = True)\n",
+    "        \n",
+    "        \n",
     "        axes_obj.set_xlabel(column + \", skewness: \" + str(round(column_skew,2)),fontsize=20)\n",
     "      \n",
     "        counter += 1\n",
